--- a/bracelets.html
+++ b/bracelets.html
@@ -131,7 +131,7 @@
         width: 100%;
         height: 380px;
         position: absolute;
-        background: #FFEBCB;
+        background: #ffffff;
         left: 0;
         top: 0;
         z-index: 1;
