--- a/bracelets.html
+++ b/bracelets.html
@@ -7,7 +7,7 @@
 <nav>
     <ul id="navbar">
         <li>
-        <a href= "#">Back Home
+        <a href= "https://fantasticplastic.github.io/">Back Home
         </a>
         </li>
     </ul>
