--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         font-style: italic;
         font-weight: 400;
         font-size: 25px;
-        color: #000000;
+        color: #f15946;
     }
     
     p {
