--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <nav>
     <ul id="navbar">
         <li>
-        <a href= "#">Purchase Bracelets
+        <a href= "fantasticplastic.github.io/bracelets.html">Purchase Bracelets
         </a>
         </li>
     </ul>
