--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         
         <section style="border-bottom-left-radius: 200px; border-bottom-right-radius: 200px;" class="words">
         <h2>More stuff</h2>
-            <p style="max-width: 400px;">I'm working to expand the variety of items to include functional recycled products. Most of what I've made so far has turned out to be a gooey gelatinous mess, but I'm making small progress!<br><br><a style="border-radius: 50px; text-decoration: none; font-weight: 600; font-style: italic; font-size: 15px; font-family: helvetica;" href="https://www.instagram.com/fantasticplastic2020/">Follow Fantastic Plastic<br>on instagram</a><br></p>
+            <p style="max-width: 400px;">I'm working to expand the variety of items to include functional recycled products. Most of what I've made so far has turned out to be a gooey gelatinous mess, but I'm making small progress!<br><br><a style="border-radius: 50px; text-decoration: none; font-weight: 600; font-style: italic; font-size: 15px; font-family: helvetica;" href="https://www.instagram.com/fantasticplastic2020/">Follow Fantastic Plastic<br>on instagram</a><br><a href="https://icons8.com/icon/32309/instagram">Instagram icon by Icons8</a>
+</p>
             
             <a href="https://www.instagram.com/fantasticplastic2020/">
         <img  id="insta" style=" position: absolute; bottom: 12px; right: 40px; height: 100px; width: 100px; animation-name: rotate; animation-duration: 3s; animation-timing-function: ease; animation-iteration-count: infinite;" src="https://img.icons8.com/ios-filled/250/000000/instagram-new.png"/></a>
